--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 .header {
     height: 100vh;
     width: 100%;
-    background: linear-gradient(rgba(2, 13, 20, 0.5), rgba(2, 13, 20, 0.5)), url(.\image/banner.png);
+    background: linear-gradient(rgba(2, 13, 20, 0.5), rgba(2, 13, 20, 0.5)), url(/banner.png);
     background-position: center;
     background-size: cover;
 
